# Ising-SW

./: .gitignore  CMakeLists.txt  README.md  SW.hpp  ising.cpp  make.sh
src/: SW.cpp  SW.hpp
template/: extract.py  init_param.py  plot.py
